<?xml version="1.0" encoding="utf-8"?>
<resources>
                                            <!--    ОСНОВНЫЕ    -->

    <string name="app_name">Soshicon</string>
    <string name="title_home">Home</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="next">Далее</string>

                                            <!--    РЕГИСТРАЦИЯ    -->

    <!--Проверка полей на символы на валидацию-->
    <string name="Limitation_EditText">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789._</string>
    <string name="Limitation_EditText_email">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789._@-</string>

    <!--Создания имени-->
    <string name="login_headline">Создание имени пользователя</string>
    <string name="login_info">Выберите имя пользователя для своего нового аккаунта. Вы сможете изменить его позже.</string>
    <string name="username_hint">Имя</string>

    <!--Создания пароля-->
    <string name="password_headline">Придумайте пароль</string>
    <string name="password_info">Мы можем запомнить пароль в ваш аккаунт Google.</string>
    <string name="password_checkbox">Сохранить пароль</string>

    <!--Создание электронной почты-->
    <string name="email_info">Soshicon может отправлять вам сообщения на почту. Вы можете отказаться от них в любой момент.</string>
    <string name="email_headline">Добавить \nэлектронный адрес</string>

    <!--Завершение регистрации-->
    <string name="welcome">, добро \n пожаловать в Soshicon!</string>
    <string name="сomplete">Завершить регистрацию</string>
    <string name="btn_registration">Зарегистрироваться</string>
    <string name="btn_enter">Войти</string>
    <string name="et_password">Пароль</string>
    <string name="ed_login">Логин</string>

                                            <!--    СОБЫТИЯ   -->

    <string name="event">События</string>

    <!--Фрагмент добавления события-->
    <string-array name="recipient">
        <item>Выберите получателя рассылки</item>
        <item>Всем</item>
        <item>Друзьям</item>
    </string-array>

    <!--Добавление события-->
    <string name="Anything_new"><font size="24">Что у вас нового?</font></string>

                                            <!--    ОТКЛИКИ   -->

    <string name="response">Отклики</string>

                                            <!--    ЧАТ   -->

    <string name="chat">Чат</string>

                                            <!--    АККАУНТ   -->

    <string name="account_edit">Edit</string>

                                            <!--    НАСТРОЙКИ   -->

    <string name="setting">Настройки</string>
    <string name="setting_edit">Редактировать</string>
    <string name="DarkMode">Темная тема</string>
    <string name="notification">Уведомления</string>
    <string name="textSize">Размер шрифта</string>
    <string name="language">Язык</string>
    <string name="aboutUs">О нас</string>
    <string name="faq">FAQ</string>
    <string name="logOut">Выйти</string>

    <!--Смена языка-->
    <string name="language_fragment">Язык</string>


                                            <!--    ВСПЛЫВАЮЩИЕ СООБЩЕНИЯ   -->

    <!--Ошибка при авторизации-->
    <string name="authorization_error">Проверьте правильность введенных данных.</string>
    <string name="authorization_error_login_password">Неверный логин или пароль</string>

    <!--Ошибка при регистрации имени-->
    <string name="min_size_name_error">Имя должно содержать минимум 3 символа</string>
    <string name="name_taken_1">имя пользователя </string>
    <string name="name_taken_2"> уже занято </string>

    <!--Ошибка при регистрации пароля-->
    <string name="min_size_password">Пароль должен содержать минимум 8 символов</string>

    <!--Ошибка при регистрации электронной почты-->
    <string name="email_error">Введите действительную эл. почту. \nНапример: myemail@gmail.com</string>

    <!--Ошибка при отсутствии интернета-->
    <string name="not_internet_error">Нет подключения к Интернету</string>
    <string name="Eror_add_event" translatable="false">Ошибка</string>

</resources>